Supplement missing columns in different screen sizes in Right Menu View. Correct logo on tablet display.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -482,6 +482,10 @@ hr {
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199px) {
+
+  .right-menu-title {
+    font-size: $main-page-title-desktop - 10px;
+  }
 }
 
 /* Large devices (large desktops, 1200px and up) */
